public class Aluno extends Usuario{

    public void matricular(Turma turma){
        //fazer
    }
    
    public void matricular(Turma turma){
        //fazer
    }

}