public class Professor extends Usuario{
    private String especialidade;
   
    public int getEspecialidade() {
        return especialidade;
    }
    
    public void setEspecialidade(int especialidade) {
        this.specialidade = especialidade;
    }

}