public enum StatusDisciplina{
ATIVA;
INATIVA;
ENCERRADA;
}