public enum TipoDisciplina{
    OBRIGATORIA;
    OPTATIVA;
}