package com.lds.matricula_facil.model;

public class Turma {
    
}
